# clipboard-qr-sync

./: Cargo.toml  README.md  build.rs  icons.rc
src/: main.rs
