[package]
name = "clipboard_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
image = "0.24.1"
quircs = "0.10.0"
clipboard-win = "4.4.1"
notify-rust = "4.5.8"
chrono = "0.4.19"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[build-dependencies]
embed-resource = "1.7.2"
