[package]
name = "clipboard_sync"
version = "0.1.0"
edition = "2021"
description = "Sync clipboards via QR codes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
image = "0.24.1"
quircs = "0.10.0"
clipboard-win = "4.4.1"
notify-rust = "4.5.8"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["cargo"] }
qrcodegen = "1.8.0"
show-image = { git = "https://github.com/jsmcconn/show-image-rs", branch="add-set-pos", version = "0.12.1", features = ["image", "macros"] }
winapi = { version = "0.3.9", features = ["consoleapi"] }

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[build-dependencies]
embed-resource = "1.7.2"
